# taskbench

./: .gitignore  AGENT.md  MIGRATION.md  PRD.md  README.md  justfile  pyproject.toml  seed.py
.claude/skills/cli-agent-eval/: SKILL.md
.factory/: assessment-2026-06-20.md
.github/workflows/: deploy-planka-railway.yml  test.yml
clickup/: __init__.py
clickup/cli/: __init__.py  main.py  output.py  shared.py  task_filters.py  utils.py
clickup/cli/commands/: api.py  bulk.py  config.py  discover.py  folder.py  list.py  setup.py  task.py  templates.py  workspace.py
clickup/core/: __init__.py  client.py  config.py  exceptions.py  json_provider.py  models.py  plane_provider.py  planka_provider.py  providers.py  todoist_provider.py
deploy/railway/: README.md  planka.env.example  railway.toml  seed-cloud.sh
deploy/railway/backup/: README.md  backup.sh  restore.sh
deploy/railway/caddy/: Caddyfile  README.md
docs/: architecture.md  backends.md  writing-an-adapter.md
eval/seed/: taskflow.json
evals/: 205486a-r4.json  205486a-r5.json  35a48b9-r8.json  68ad0b2-r1-INVALID.json  7ac60b7-r9.json  9dc2b5b-r2.json  a22824e.json  afe5e5f-r3.json  b8bb6b8.json  fd8b775-r6.json  fd8b775-r7.json
planka-stack/: docker-compose.yml
research-agentic-clis/: 00 - Synthesis Report.md
research-agentic-clis/CaseStudies/: 01 - GitHub CLI gh.md  02 - Linear MCP and API.md  03 - Todo and Ticket CLIs.md
research-agentic-clis/Patterns/: 04 - JSON Contracts and Chaining.md  05 - Mutation Command Shapes.md
research-agentic-clis/Product/: 06 - Contrarian Product Lens.md
research-agentic-clis/mock-study/: 00-synthesis-v2.md  00-synthesis-v3.md  00-synthesis.md  agent-01-config.json  agent-01-store.json  agent-02-config.json  agent-02-store.json  agent-03-config.json  agent-03-store.json  agent-04-config.json  agent-04-store.json  agent-05-config.json  agent-05-store.json  agent-06-config.json  agent-06-store.json  agent-07-config.json  agent-07-store.json  agent-08-config.json  agent-08-store.json  agent-09-config.json  agent-09-store.json  agent-10-config.json  agent-10-store.json  agent-11-config.json  agent-11-store.json  agent-12-config.json  agent-12-store.json  agent-13-config.json  agent-13-store.json  agent-14-config.json  agent-14-store.json  agent-15-config.json  agent-15-store.json
research-agentic-clis/mock-study/feedback/: agent-01-feedback-v2.md  agent-01-feedback-v3.md  agent-01-feedback.md  agent-02-feedback-v2.md  agent-02-feedback-v3.md  agent-02-feedback.md  agent-03-feedback-v2.md  agent-03-feedback-v3.md  agent-03-feedback.md  agent-04-feedback-v2.md  agent-04-feedback-v3.md  agent-04-feedback.md  agent-05-feedback-v2.md  agent-05-feedback-v3.md  agent-05-feedback.md  agent-06-feedback-v2.md  agent-06-feedback-v3.md  agent-06-feedback.md  agent-07-feedback-v2.md  (+32 more)
spec/: README.md  openapi.yaml
taskbench/: __init__.py
taskbench/cli/: __init__.py  main.py  output.py  shared.py  task_filters.py
taskbench/core/: __init__.py  client.py  config.py  exceptions.py  json_provider.py  params.py  providers.py
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_api_command.py  test_backlog_49.py  test_backlog_49_batch2.py  test_bulk_operations.py  test_cli_commands.py  test_command_coverage.py  test_discovery_commands.py  test_e2e_json_scenario.py  test_final_coverage.py  test_json_format.py  test_list_commands.py  test_list_stats.py  test_main.py  test_main_coverage.py  test_mock_provider.py  test_more_coverage.py  test_polish_63.py  test_setup_auto.py  test_setup_wizard.py  test_task_commands.py  test_task_coverage.py  test_template_commands.py  test_workspace_commands.py
tests/live/: conftest.py  test_auth.py  test_cli.py  test_hierarchy.py  test_tasks.py  test_workspaces.py
tests/unit/: test_apply_task_filters.py  test_cli_config.py  test_config_advanced.py  test_core_client.py  test_core_client_extended.py  test_core_config.py  test_core_models.py  test_dotenv_loading.py  test_folder_enrichment.py  test_issue35_items.py  test_list_stats_renderer.py  test_main_error_envelope.py  test_parse_sort.py  test_provider_contract.py  test_renderers.py  test_shared.py
(+9 files in other folders)
