[project]
name = "clickup-toolkit"
version = "0.4.1"
description = "A powerful CLI for ClickUp task management"
authors = [
    { name = "Evan Oman", email = "evan@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["clickup", "cli", "task-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "plankapy>=2.2.2",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ty>=0.0.8",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
    "genbadge[coverage]>=1.1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["clickup"]

[project.scripts]
clickup = "clickup.cli.main:main"
cup = "clickup.cli.main:main"


[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

# Typer/Click param factories return immutable ParameterInfo singletons; ruff's
# B008 (mutable-default) doesn't know this, so it flags `task_ids: list[str] =
# typer.Argument(...)` even though the default is fine. Allowlist the framework
# call sites so we don't have to noqa every signature.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = ["tests/**", "clickup/core/planka_provider.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=clickup --cov-report=term-missing --cov-fail-under=90 --ignore=tests/live"
asyncio_mode = "auto"
markers = [
    "live: marks tests as requiring live ClickUp API access (deselect with '-m \"not live\"')",
]

[tool.coverage.run]
omit = [
    "clickup/core/planka_provider.py",
]
